<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login_title"
        android:textSize="24sp"
        />
    <TextView
        android:id="@+id/tv_login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_login_title"
        android:layout_centerHorizontal="true"
        android:text="@string/login_sub_title"
        android:textSize="18sp"
        />

    <LinearLayout
        android:id="@+id/ll_input_username"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login_subtitle"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="用户"
            android:textSize="18sp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:id="@+id/ed_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="18sp"
            android:singleLine="true"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_input_password"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_input_username"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textSize="18sp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:id="@+id/ed_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:singleLine="true"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_record_username"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_input_password"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        >
        <ImageView
            android:id="@+id/iv_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_checkbox_focus"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/login_record_username"
            android:layout_marginRight="30dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_action"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/common_btn_selector"
        android:layout_marginTop="50dp"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_below="@+id/ll_record_username"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_version"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"/>




</RelativeLayout>